# docs/swagger.json
@@ -155,9 +155,9 @@
                 }
             }
         },
-        "/admin/manage/{id}": {
-            "get": {
-                "description": "Get an admin by ID",
+        "/admin/manage/": {
+            "put": {
+                "description": "Update an admin by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -167,13 +167,22 @@
                 "tags": [
                     "admin"
                 ],
-                "summary": "Get an admin by ID",
+                "summary": "Update an admin by ID",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Admin ID",
-                        "name": "id",
-                        "in": "path",
+                        "description": "Admin Object",
+                        "name": "admin",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entities.Admin"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Admin Token",
+                        "name": "token",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -197,9 +206,11 @@
                         }
                     }
                 }
-            },
-            "put": {
-                "description": "Update an admin by ID",
+            }
+        },
+        "/admin/manage/{id}": {
+            "get": {
+                "description": "Get an admin by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -209,7 +220,7 @@
                 "tags": [
                     "admin"
                 ],
-                "summary": "Update an admin by ID",
+                "summary": "Get an admin by ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -217,15 +228,6 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "Admin Object",
-                        "name": "admin",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entities.Admin"
-                        }
                     }
                 ],
                 "responses": {
